Passing in portfolio ID for position performance.
